syntax = "proto3";

package proto;

option go_package = "lab3/proto";

service StarwarsGame {

    // Funciones para Leia
    rpc GetCantSoldadosBroker (GetBrokerRequest) returns (GetBrokerReply) {}
    rpc GetCantSoldadosServer (GetServerRequest) returns (GetServerReply) {}
    rpc MergeLeia (MergeLeiaRequest) returns (MergeLeiaReply) {}

    // Funciones para Informantes
    rpc AskForServers (AskForServersRequest) returns (AskForServersReply) {}

    rpc AskedServer (AskedServerRequest) returns (AskedServerReply) {}

    rpc GetLogs (GetLogsRequest) returns (GetLogsReply) {}
}

message GetBrokerRequest{
    string planeta = 1;
    string ciudad = 2;
}

message GetBrokerReply{
    int32 rebeldes = 1;
    repeated int32 reloj = 2;
    string servidor = 3;
}

message GetServerRequest{
    string planeta = 1;
    string ciudad = 2;
}
message GetServerReply{
    int32 rebeldes = 1;
    repeated int32 reloj = 2;
}

message MergeLeiaRequest {
    string planeta = 1;
    string ciudad = 2;
}

message MergeLeiaReply {
    int32 rebeldes = 1;
    repeated int32 reloj = 2;
    string servidor = 3;
}

message AskForServersRequest {
    string comando = 1;
}

message AskForServersReply {
    string servidor = 1;
}

message AskedServerRequest {
    string informante = 1;
    string comando = 2;
}

message AskedServerReply {
    repeated int32 reloj = 1;
}

message GetLogsRequest {
    int32 numserver = 1;
}

message GetLogsReply {
    string log = 1;
    int32 servidor = 2;
}